Новые иконки.Декоративные элементы. Сетки.

--- a/catalog.html
+++ b/catalog.html
@@ -15,11 +15,11 @@
   <header class="main-header">
     <div class="container">
       <div class="header-top">
-        <div class="logo">
+        <div class="logo clearfix">
           <a href="index.html"><img src="img/logo-gllacy.svg" width="154" height="64" alt=""></a>
         </div>
-        <nav class="main-navigation">
-          <ul>
+        <nav>
+          <ul class="main-navigation">
             <li>Каталог</li>
             <li><a href="#">Доставка и оплата</a></li>
             <li><a href="#">О компании</a></li>
@@ -39,11 +39,11 @@
     </div>
   </header>
   <main class="container">
-    <ul class="breadcrumbs">
-      <li><a href="#">Главная</a></li>
-      <li><a href="catalog.html">Каталог</a></li>
-      <li><a href="#">Сливочное</a></li>
-    </ul>
+    <div class="breadcrumbs">
+      <a href="#">Главная</a>
+      <a href="catalog.html">Каталог</a>
+      <a href="#">Сливочное</a>
+    </div>
     <h1 class="page-title">Сливочное мороженое</h1>
     <form action="echo" method="post">
       <label>Сортировка:</label>
@@ -90,76 +90,78 @@
       </label>
       <input type="submit" value="Применить">
     </form>
-    <div class="products price">
-      <div class="product">
-        <img src="img/icecream-orange-jam.png" width="267" height="267" alt="">310 Р/кг
+    <div class="products">
+      <div class="product price">
+        <img src="img/icecream-orange-jam.png" width="267" height="267" alt=""><span>310 /кг</span>
         <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
-      <div class="product">
-        <img src="img/icecream-pieces-chocolate.png" width="267" height="267" alt="">380 Р/кг
+      <div class="product price">
+        <img src="img/icecream-pieces-chocolate.png" width="267" height="267" alt=""><span>380 /кг</span>
         <a href="#">Сливочно-кофейное с кусочками шоколада</a>
-        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
-      <div class="product">
-        <img src="img/icecream-white-chocolate.png" width="267" height="267" alt="">355 Р/кг
+      <div class="product price">
+        <img src="img/icecream-white-chocolate.png" width="267" height="267" alt=""><span>355 /кг</span>
         <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
-      <div class="product">
-        <img src="img/icecream-creme-brulee.png" width="267" height="267" alt="">415 Р/кг
+      <div class="product price">
+        <img src="img/icecream-creme-brulee.png" width="267" height="267" alt=""><span>415 /кг</span>
         <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
-        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
-      <div class="product">
-        <img src="img/icecream-lingonberry-jam.png" width="267" height="267" alt="">325 Р/кг
+      <div class="product price">
+        <img src="img/icecream-lingonberry-jam.png" width="267" height="267" alt=""><span>325 /кг</span>
         <a href="#">Сливочное с брусничным джемом</a>
-        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
-      <div class="product">
-        <img src="img/icecream-blueberries.png" width="267" height="267" alt="">410 Р/кг
+      <div class="product price">
+        <img src="img/icecream-blueberries.png" width="267" height="267" alt=""><span>410 /кг</span>
         <a href="#">Сливочно-черничное с цельными ягодами черники</a>
-        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
-      <div class="product">
-        <img src="img/icecream-lemon-candy.png" width="267" height="267" alt="">375 Р/кг
+      <div class="product price">
+        <img src="img/icecream-lemon-candy.png" width="267" height="267" alt=""><span>375 /кг</span>
         <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
-        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
-      <div class="product">
-        <img src="img/icecream-chocolate-chips.png" width="267" height="267" alt="">320 Р/кг
+      <div class="product price">
+        <img src="img/icecream-chocolate-chips.png" width="267" height="267" alt=""><span>320 /кг</span>
         <a href="#">Сливочное с шоколадной стружкой</a>
-        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
-      <div class="product">
-        <img src="img/icecream-vanilla-chocolate-chips.png" width="267" height="267" alt="">440 Р/кг
+      <div class="product price">
+        <img src="img/icecream-vanilla-chocolate-chips.png" width="267" height="267" alt=""><span>440 /кг</span>
         <a href="#">Сливочно-ванильное с кусочками шоколада</a>
-        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
-      <div class="product">
-        <img src="img/icecream-menthol-syrup.png" width="267" height="267" alt="">435 Р/кг
+      <div class="product price">
+        <img src="img/icecream-menthol-syrup.png" width="267" height="267" alt=""><span>435 /кг</span>
         <a href="#">Сливочное с ментоловым сиропом</a>
-        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
-      <div class="product">
-        <img src="img/icecream-pieces-dark-chocolate.png" width="267" height="267" alt="">355 Р/кг
+      <div class="product price">
+        <img src="img/icecream-pieces-dark-chocolate.png" width="267" height="267" alt=""><span>355   /кг</span>
         <a href="#">Сливочное с кусочками черного шоколада</a>
-        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
-      <div class="product">
-        <img src="img/icecream-mint-syrup.png" width="267" height="267" alt="">420 Р/кг
+      <div class="product price">
+        <img src="img/icecream-mint-syrup.png" width="267" height="267" alt=""><span>420 /кг</span>
         <a href="#">Сливочное с мятными сиропом</a>
-        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
     </div>
-    <div class="paginator">
-      <a class="prev" href="#prev">Назад</a>
-      <a href="#1">1</a>
-      <a href="#1">2</a>
-      <a href="#1">3</a>
-      <a href="#1">4</a>
-      <a href="#5">5</a>
-      <a class="next" href="#next">Вперёд</a>
+    <div class="main-paginator">
+      <div class="paginator">
+        <a class="prev disabled" href="#prev">Назад</a>
+        <a href="#1" class="current">1</a>
+        <a href="#1">2</a>
+        <a href="#1">3</a>
+        <a href="#1">4</a>
+        <a href="#5">5</a>
+        <a class="next" href="#next">Вперёд</a>
+      </div>
     </div>
   </main>
   <footer class="main-footer">
@@ -176,11 +178,9 @@
         <a href="#" class="">Наши документы</a>
         <a href="#" class="">Экологические стандарты</a>
       </div>
-      <div class="footer-logo">
-        <a href="#"><img src="img/logo-ha.svg" width="108" height="37" alt=""></a>
-      </div>
       <div class="footer-copyright">
-        Сделано в <a href="htmlacademy.ru">HTML Academy</a>© 2016
+        <a href="#"><img src="img/logo-ha.svg" width="108" height="37" alt="" class="clearfix"></a>
+        <br>Сделано в <a href="htmlacademy.ru">HTML Academy</a>© 2016
       </div>
     </div>
   </footer>
