--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <div class="logo">
             <img src="img/logo-gllacy.svg" width="154" height="64" alt="">
           </div>
-          <nav class="main-navigation">
-            <ul>
+          <nav>
+            <ul class="main-navigation">
               <li><a href="#">Каталог</a>
                 <ul class="catalog-navigation">
                   <li><a href="#">Новинки</a></li>
@@ -38,13 +38,13 @@
             </ul>
           </nav>
           <a class="search" href="#"></a>
-          <form class="" action="/echo" method="post">
+          <form class="click-search" action="/echo" method="post">
             <label>
               <input type="search" name="search" placeholder="Что ищем?">
             </label>
           </form>
           <a class="login" href="#">Вход</a>
-          <form class="" action="/echo" method="post">
+          <form class="login-entrance" action="/echo" method="post">
             <label>
               <input type="email" placeholder="Электронная почта" required>
             </label>
@@ -99,20 +99,20 @@
           <a href="#" class="btn btn-red btn-features">Хочу шоколадки!</a>
         </div>
         <div class="products">
-          <div class="product hit">
-            <img src="img/icecream-orange-jam.png" width="267" height="267" alt="">310 P/кг
+          <div class="product hit price ruble">
+            <img src="img/icecream-orange-jam.png" width="267" height="267" alt=""><span>310   /кг</span>
             <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
           </div>
-          <div class="product hit">
-            <img src="img/icecream-pieces-chocolate.png" width="267" height="267" alt="">380 Р/кг
+          <div class="product hit price">
+            <img src="img/icecream-pieces-chocolate.png" width="267" height="267" alt=""><span>380   /кг</span>
             <a href="#">Сливочно-кофейное с кусочками шоколада</a>
           </div>
-          <div class="product hit">
-            <img src="img/icecream-white-chocolate.png" width="267" height="267" alt="">355 Р/кг
+          <div class="product hit price">
+            <img src="img/icecream-white-chocolate.png" width="267" height="267" alt=""><span>355   /кг</span>
             <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
           </div>
-          <div class="product hit">
-            <img src="img/icecream-creme-brulee.png" width="267" height="267" alt="">415 Р/кг
+          <div class="product hit price">
+            <img src="img/icecream-creme-brulee.png" width="267" height="267" alt=""><span>415   /кг</span>
             <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
           </div>
         </div>
@@ -127,7 +127,7 @@
         </ul>
       </section>
       <div class="news-subscription clearfix">
-        <div class="news">Новое в нашем блоге</div>
+        <div class="news">Новое в нашем блоге></div>
         <article>
           <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
           <img src="img/bg-strawberry.jpg" width="560" height="220" alt="">
@@ -140,7 +140,7 @@
           </form>
         </div>
       </div>
-      <div class="map clearfix">
+      <div class="map">
         <div class="address">
           Адресс нашего офиса и
           <br> офлайн магазина
@@ -168,11 +168,11 @@
       <div class="container">
         <div class="footer-social">
           <a href="#" class="social-btn social-btn-tw">Твиттер</a>
-          <a href="#" class="social-btn social-btn-in">Инстаграмм</a>
+          <a href="#" class="social-btn social-btn-inst">Инстаграмм</a>
           <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
           <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
         </div>
-        <div class="footer-menu">
+        <div class="footer-menu clearfix">
           <a href="#" class="icon"><b>Для поставщиков</b></a>
           <a href="#">О производстве</a>
           <a href="#">Наши документы</a>
@@ -180,7 +180,7 @@
         </div>
         <div class="footer-copyright">
           <a href="#"><img src="img/logo-ha.svg" width="108" height="37" alt=""></a>
-          Сделано в <a href="htmlacademy.ru">HTML Academy</a>© 2016
+          <br>Сделано в <a href="htmlacademy.ru">HTML Academy</a>© 2016
         </div>
       </div>
     </footer>
