--- a/index.html
+++ b/index.html
@@ -37,130 +37,135 @@
               <li><a href="#">О компании</a></li>
             </ul>
           </nav>
-          <a class="search" href="#"></a>
+          <a class="search" href="#"><img src="img/icon-search.svg" width="17" height="17" alt="Поиск"></a>
           <form class="click-search" action="/echo" method="post">
             <label>
               <input type="search" name="search" placeholder="Что ищем?">
             </label>
           </form>
           <a class="login" href="#">Вход</a>
-          <form class="login-entrance" action="/echo" method="post">
-            <label>
-              <input type="email" placeholder="Электронная почта" required>
-            </label>
-            <label>
-              <input type="password" name="password" placeholder="Пароль" required>
-            </label>
-            <input type="submit" value="Войти" class="btn btn-red">
-            <a href="#">Забыли пароль?</a>
-            <a href="#">Новая регистрация</a>
-          </form>
-          <a class="basket" href="#">Корзина</a>
+          <div class="login-entrance">
+            <form action="/echo" method="post">
+              <label>
+                <input type="email" placeholder="Электронная почта" required>
+              </label>
+              <label>
+                <input type="password" name="password" placeholder="Пароль" required>
+              </label>
+              <input type="submit" value="Войти" class="btn btn-red">
+              <a href="#">Забыли пароль?</a>
+              <a href="#">Новая регистрация</a>
+            </form>
+          </div>
+          <a class="basket" href="#">Пусто</a>
           <div class="contacts">
-            C 10 до 20 ежедневно
-            <br> 8 812 450-25-25
+            C 10 до 20, ежедневно
+            <br> <span class="number">8 812 450-25-25</span>
           </div>
         </div>
       </div>
     </header>
-    <main class="container">
-      <div class="promo">
-        <div class="promo-slider">
-          <div class="slider">
-            <div class="slide" id="slide1">
-              <div class="slide-title">Крембрюле и пломбир с малиновым джемом</div>
-              <a href="#" class="btn btn-red btn-slide">Давайте оба!</a>
-            </div>
-            <div class="slide" id="slide2">
-              <div class="slide-title">Шоколадный пломбир и лимонный сорбет</div>
-              <a href="#" class="btn btn-red btn-slide">Давайте оба!</a>
-            </div>
-            <div class="slide" id="slide3">
-              <div class="slide-title">Пломбир с помадкой и клубничный щербет</div>
-              <a href="#" class="btn btn-red btn-slide">Давайте оба!</a>
-            </div>
-            <div class="slider-controls">
-              <label for="btn-1"></label>
-              <label for="btn-2"></label>
-              <label for="btn-3"></label>
+    <main>
+      <div class="container">
+        <div class="promo">
+          <div class="promo-slider">
+            <div class="slider">
+              <div class="slide" id="slide1">
+                <div class="slide-title">Крембрюле и пломбир с малиновым джемом</div>
+                <a href="#" class="btn btn-red btn-slide">Давайте оба!</a>
+              </div>
+              <div class="slide" id="slide2">
+                <div class="slide-title">Шоколадный пломбир и лимонный сорбет</div>
+                <a href="#" class="btn btn-slide">Давайте оба!</a>
+              </div>
+              <div class="slide" id="slide3">
+                <div class="slide-title">Пломбир с помадкой и клубничный щербет</div>
+                <a href="#" class="btn btn-red btn-slide">Давайте оба!</a>
+              </div>
+              <div class="slider-controls">
+                <label for="btn-1"></label>
+                <label for="btn-2"></label>
+                <label for="btn-3"></label>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <section class="features clearfix">
-        <div class="features-raspberry">
-          <h3>Малинка даром!</h3>
-          <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-          <a href="#" class="btn btn-red btn-features">Хочу варенье!</a>
-        </div>
-        <div class="features-chocolate">
-          <h3>Шоколадки даром!</h3>
-          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-          <a href="#" class="btn btn-red btn-features">Хочу шоколадки!</a>
-        </div>
-        <div class="products">
-          <div class="product hit price ruble">
-            <img src="img/icecream-orange-jam.png" width="267" height="267" alt=""><span>310   /кг</span>
-            <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+        <section class="features clearfix">
+          <div class="features-raspberry">
+            <h3>Малинка даром!</h3>
+            <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a href="#" class="btn btn-red btn-features">Хочу варенье!</a>
           </div>
-          <div class="product hit price">
-            <img src="img/icecream-pieces-chocolate.png" width="267" height="267" alt=""><span>380   /кг</span>
-            <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+          <div class="features-chocolate">
+            <h3>Шоколадки даром!</h3>
+            <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+            <a href="#" class="btn btn-red btn-features">Хочу шоколадки!</a>
           </div>
-          <div class="product hit price">
-            <img src="img/icecream-white-chocolate.png" width="267" height="267" alt=""><span>355   /кг</span>
-            <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+          <div class="products">
+            <div class="product hit">
+              <img src="img/icecream-orange-jam.png" width="267" height="267" alt="">
+              <div class="price">310<span>P</span>/кг</div>
+              <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+              <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+            </div>
+            <div class="product hit">
+              <img src="img/icecream-pieces-chocolate.png" width="267" height="267" alt="">
+              <div class="price">380<span>P</span>/кг</div>
+              <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+              <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+            </div>
+            <div class="product hit">
+              <img src="img/icecream-white-chocolate.png" width="267" height="267" alt="">
+              <div class="price">355<span>P</span>/кг</div>
+              <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+              <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+            </div>
+            <div class="product hit">
+              <img src="img/icecream-creme-brulee.png" width="267" height="267" alt="">
+              <div class="price">415<span>P</span>/кг</div>
+              <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+              <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+            </div>
           </div>
-          <div class="product hit price">
-            <img src="img/icecream-creme-brulee.png" width="267" height="267" alt=""><span>415   /кг</span>
-            <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+        </section>
+        <section class="advantages clearfix">
+          <h1 class="advantages-title"> Магазин Глейси - это онлайн и оффлайн магазин по продаже мороженного собственного производства на развес</h1>
+          <ul class="clearfix">
+            <li class="own-icecream">Все наше мороженное изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий</li>
+            <li class="farm">Закупка ингридиента производиться только у проверенных фермерских хозяйств и компаний, с которыми нас связывают долговременное сотрудничество </li>
+            <li class="ecologically">Для приготовления мороженого используется настоящие сливки и молоко высочайшего качества. Все дополнительные ингридиенты добавки произведены из натурального экологически чистого сырья.</li>
+            <li class="temperature">Доставка нашего мороженого до заказчиков осуществляется в специальной термоупаковке, которая не дает мороженному растаять в пути и позволяет ему сохранить свой превосходный вкус.</li>
+          </ul>
+        </section>
+        <div class="news-subscription clearfix">
+          <div class="news-title">Новое в нашем блоге</div>
+          <article class="news">
+            <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
+            <img src="img/bg-strawberry.jpg" width="560" height="220" alt="">
+          </article>
+          <div class="subscription-pattern clearfix">
+            <div class="subscription clearfix">
+              <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
+              <form action="/echo" method="post">
+                <input type="email" placeholder="Электронная почта" required>
+                <input type="submit" class="btn btn-red btn-subscription">
+              </form>
+            </div>
           </div>
-        </div>
-      </section>
-      <section class="advantages clearfix">
-        <h1 class="advantages-title"> Магазин Глейси - это онлайн и оффлайн магазин по продаже мороженного собственного производства на развес</h1>
-        <ul class="clearfix">
-          <li class="own-icecream">Все изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий</li>
-          <li class="farm">Закупка ингридиента производиться только у проверенных фермерских хозяйств и компаний, с которыми нас связывают долговременное сотрудничество </li>
-          <li class="ecologically">Для приготовления мороженного используется настояшие сливки и молоко высочайшего качества. Все дополнительные ингридиенты добавки произведены из натурального экологически чистого сырья.</li>
-          <li class="temperature">Доставка нашего мороженного до заказчиков осуществляется в специальной термоупаковке, которая не дает мороженному растаять в пути и позволяет ему сохранить свой превосходный вкус.</li>
-        </ul>
-      </section>
-      <div class="news-subscription clearfix">
-        <div class="news">Новое в нашем блоге></div>
-        <article>
-          <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
-          <img src="img/bg-strawberry.jpg" width="560" height="220" alt="">
-        </article>
-        <div class="subscription clearfix">
-          Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не слать всякой ненужной ерунды. Честно=)
-          <form action="/echo" method="post">
-            <input type="email" placeholder="Электронная почта" required>
-            <input type="submit" class="btn btn-red btn-subscription">
-          </form>
         </div>
       </div>
       <div class="map">
-        <div class="address">
-          Адресс нашего офиса и
-          <br> офлайн магазина
+        <div class="feedback">
+          <p>Адрес нашего офиса и
+            <br>офлайн магазина</p>
           <br>
-          <strong>ул.Большая Конюшенная<br>19/8, Санкт-Петербург<br></strong> Для заказов по телефону:
+          <span class="adress">ул.Большая Конюшенная<br>19/8, Санкт-Петербург<br></span>
+          <p>Для заказов по телефону:</p>
           <br>
           <strong>8 812 450-25-25</strong>
           <br> (c 10 до 20 ежедневно)
+          <br>
           <a href="#" class="btn btn-red">Форма обратной связи</a>
-          <form action="/echo" method="post">
-            <legend>Мы обязательно вам ответим!</legend>
-            <label>
-              <input type="text" placeholder="Как вас зовут?" required>
-            </label>
-            <label>
-              <input type="email" placeholder="Ваша почта для ответа?" required>
-            </label>
-            <textarea rows="" cols="" placeholder="Напишите что-нибудь..."></textarea>
-            <input type="submit" class="btn btn-red" value="Отправить">
-          </form>
         </div>
       </div>
     </main>
@@ -174,8 +179,8 @@
         </div>
         <div class="footer-menu clearfix">
           <a href="#" class="icon"><b>Для поставщиков</b></a>
-          <a href="#">О производстве</a>
           <a href="#">Наши документы</a>
+          <a href="#">О производстве</a>
           <a href="#">Экологические стандарты</a>
         </div>
         <div class="footer-copyright">
@@ -184,6 +189,19 @@
         </div>
       </div>
     </footer>
+  </div>
+  <div class="feedback-form">
+    <form action="/echo" method="post">
+      <legend>Мы обязательно вам ответим!</legend>
+      <label>
+        <input type="text" placeholder="Как вас зовут?" required>
+      </label>
+      <label>
+        <input type="email" placeholder="Ваша почта для ответа?" required>
+      </label>
+      <textarea rows="" cols="" placeholder="Напишите что-нибудь..."></textarea>
+      <input type="submit" class="btn btn-red" value="Отправить">
+    </form>
   </div>
 </body>
 
