--- a/catalog.html
+++ b/catalog.html
@@ -25,12 +25,33 @@
             <li><a href="#">О компании</a></li>
           </ul>
         </nav>
-        <form class="" action="/echo" method="post">
-          <label for="search"></label>
-          <input type="search" name="search" id="search">
-        </form>
-        <a class="login" href="#">Вход</a>
-        <a class="basket" href=#>Корзина</a>
+        <div class="basket">
+          <a href="#">Пусто</a>
+        </div>
+        <div class="login">
+          <a href="#">Вход</a>
+          <div class="login-entrance">
+            <form action="/echo" method="post">
+              <label>
+                <input type="email" placeholder="Электронная почта" required>
+              </label>
+              <label>
+                <input type="password" name="password" placeholder="Пароль" required>
+              </label>
+              <input type="submit" value="Войти" class="btn btn-red">
+              <a href="#">Забыли пароль?</a>
+              <a href="#">Новая регистрация</a>
+            </form>
+          </div>
+        </div>
+        <div class="search">
+          <a href="#">Поиск</a>
+          <form class="click-search" action="/echo" method="post">
+            <label>
+              <input type="search" name="search" placeholder="Что ищем?">
+            </label>
+          </form>
+        </div>
         <div class="contacts">
           C 10 до 20 ежедневно
           <br> <span class="number">8 812 450-25-25</span>
@@ -64,7 +85,9 @@
         <label>
           <input type="radio" name="fatcontent" value="0%">0%
         </label>
-        <input type="radio" name="fatcontent" value="before10%" checked>до 10%
+        <label>
+          <input type="radio" name="fatcontent" value="before10%" checked>до 10%
+        </label>
         <label>
           <input type="radio" name="fatcontent" value="before30%">до 30%
         </label>
@@ -95,73 +118,121 @@
     <div class="products">
       <div class="product">
         <img src="img/icecream-orange-jam.png" width="267" height="267" alt="">
-        <div class="price">310<span>Р</span>/кг</div>
+        <div class="price">
+          310
+          <span>Р</span>
+          <span class="minify">/кг</span>
+        </div>
         <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-pieces-chocolate.png" width="267" height="267" alt="">
-        <div class="price">380<span>Р</span>/кг</div>
+        <div class="price">
+          380
+          <span>Р</span>
+          <span class="minify">/кг</span>
+        </div>
         <a href="#">Сливочно-кофейное с кусочками шоколада</a>
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-white-chocolate.png" width="267" height="267" alt="">
-        <div class="price">355<span>P</span>/кг</div>
+        <div class="price">
+          355
+          <span>P</span>
+          <span class="minify">/кг</span>
+        </div>
         <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-creme-brulee.png" width="267" height="267" alt="">
-        <div class="price">415<span>P</span>/кг</div>
+        <div class="price">
+          415
+          <span>P</span>
+          <span class="minify">/кг</span>
+        </div>
         <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-lingonberry-jam.png" width="267" height="267" alt="">
-        <div class="price">325<span>P</span>/кг</div>
+        <div class="price">
+          325
+          <span>P</span>
+          <span class="minify">/кг</span>
+        </div>
         <a href="#">Сливочное с брусничным джемом</a>
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-blueberries.png" width="267" height="267" alt="">
-        <div class="price">410<span>Р</span>/кг</div>
+        <div class="price">
+          410
+          <span>Р</span>
+          <span class="minify">/кг</span>
+        </div>
         <a href="#">Сливочно-черничное с цельными ягодами черники</a>
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-lemon-candy.png" width="267" height="267" alt="">
-        <div class="price">375<span>Р</span>/кг</div>
+        <div class="price">
+          375
+          <span>Р</span>
+          <span class="minify">/кг</span>
+        </div>
         <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-chocolate-chips.png" width="267" height="267" alt="">
-        <div class="price">320<span>Р</span>/кг</div>
+        <div class="price">
+          320
+          <span>Р</span>
+          <span class="minify">/кг</span>
+        </div>
         <a href="#">Сливочное с шоколадной стружкой</a>
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-vanilla-chocolate-chips.png" width="267" height="267" alt="">
-        <div class="price">440<span>Р</span>/кг</div>
+        <div class="price">
+          440
+          <span>Р</span>
+          <span class="minify">/кг</span>
+        </div>
         <a href="#">Сливочно-ванильное с кусочками шоколада</a>
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-menthol-syrup.png" width="267" height="267" alt="">
-        <div class="price">435<span>P</span>/кг</div>
+        <div class="price">
+          435
+          <span>P</span>
+          <span class="minify">/кг</span>
+        </div>
         <a href="#">Сливочное с ментоловым сиропом</a>
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-pieces-dark-chocolate.png" width="267" height="267" alt="">
-        <div class="price">355<span>Р</span>/кг</div>
+        <div class="price">
+          355
+          <span>Р</span>
+          <span class="minify">/кг</span>
+        </div>
         <a href="#">Сливочное с кусочками черного шоколада</a>
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-mint-syrup.png" width="267" height="267" alt="">
-        <div class="price">420<span>Р</span>/кг</div>
+        <div class="price">
+          420
+          <span>Р</span>
+          <span class="minify">/кг</span>
+        </div>
         <a href="#">Сливочное с мятными сиропом</a>
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
