Добавлены декоративные элементы

--- a/catalog.html
+++ b/catalog.html
@@ -26,10 +26,10 @@
           </ul>
         </nav>
         <div class="basket">
-          <a href="#">Пусто</a>
+          <span>Пусто</span>
         </div>
         <div class="login">
-          <a href="#">Вход</a>
+          <span>Вход</span>
           <div class="login-entrance">
             <form action="/echo" method="post">
               <label>
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="search">
-          <a href="#">Поиск</a>
+          <span>Поиск</span>
           <form class="click-search" action="/echo" method="post">
             <label>
               <input type="search" name="search" placeholder="Что ищем?">
