--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             </ul>
           </nav>
           <div class="basket">
-            <a href="#">Пусто</a>
+            <span>Пусто</span>
           </div>
           <div class="login">
-            <a href="#">Вход</a>
+            <span>Вход</span>
             <div class="login-entrance clearfix">
               <form action="/echo" method="post">
                 <label>
