--- a/catalog.html
+++ b/catalog.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Catalog</title>
-  <meta name="keywords" content="important words">
-  <meta name="description" content="about site">
+  <meta name="keywords" content="ice-cream glaccy shop buy">
+  <meta name="description" content="shop of ice-cream">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:700,900,500&subset=latin,cyrillic" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="header-top clearfix">
         <div class="logo">
-          <a href="index.html"><img src="img/logo-gllacy.svg" width="154" height="64" alt=""></a>
+          <a href="index.html"><img src="img/logo-gllacy.svg" width="154" height="64" alt="Gllacyshop"></a>
         </div>
         <nav>
           <ul class="main-navigation">
@@ -133,7 +133,7 @@
     </div>
     <div class="products">
       <div class="product">
-        <img src="img/icecream-orange-jam.png" width="267" height="267" alt="">
+        <img src="img/icecream-orange-jam.png" width="267" height="267" alt="ice-cream-orange">
         <div class="price">
           310
           <span>Р</span>
@@ -143,7 +143,7 @@
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/icecream-pieces-chocolate.png" width="267" height="267" alt="">
+        <img src="img/icecream-pieces-chocolate.png" width="267" height="267" alt="ice-cream-pieces-chocolate">
         <div class="price">
           380
           <span>Р</span>
@@ -163,7 +163,7 @@
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/icecream-creme-brulee.png" width="267" height="267" alt="">
+        <img src="img/icecream-creme-brulee.png" width="267" height="267" alt="ice-cream-creme-brulee">
         <div class="price">
           415
           <span>P</span>
@@ -173,7 +173,7 @@
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/icecream-lingonberry-jam.png" width="267" height="267" alt="">
+        <img src="img/icecream-lingonberry-jam.png" width="267" height="267" alt="ice-cream-lingonberry-ja">
         <div class="price">
           325
           <span>P</span>
@@ -183,7 +183,7 @@
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/icecream-blueberries.png" width="267" height="267" alt="">
+        <img src="img/icecream-blueberries.png" width="267" height="267" alt="ice-cream-blueberries">
         <div class="price">
           410
           <span>Р</span>
@@ -193,7 +193,7 @@
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/icecream-lemon-candy.png" width="267" height="267" alt="">
+        <img src="img/icecream-lemon-candy.png" width="267" height="267" alt="ice-cream-lemon-candy">
         <div class="price">
           375
           <span>Р</span>
@@ -203,7 +203,7 @@
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/icecream-chocolate-chips.png" width="267" height="267" alt="">
+        <img src="img/icecream-chocolate-chips.png" width="267" height="267" alt="ice-cream-chocolate-chips">
         <div class="price">
           320
           <span>Р</span>
@@ -213,7 +213,7 @@
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/icecream-vanilla-chocolate-chips.png" width="267" height="267" alt="">
+        <img src="img/icecream-vanilla-chocolate-chips.png" width="267" height="267" alt="ice-cream-vanilla-chocolate-chips">
         <div class="price">
           440
           <span>Р</span>
@@ -223,7 +223,7 @@
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/icecream-menthol-syrup.png" width="267" height="267" alt="">
+        <img src="img/icecream-menthol-syrup.png" width="267" height="267" alt="ice-cream-menthol-syrup">
         <div class="price">
           435
           <span>P</span>
@@ -233,7 +233,7 @@
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/icecream-pieces-dark-chocolate.png" width="267" height="267" alt="">
+        <img src="img/icecream-pieces-dark-chocolate.png" width="267" height="267" alt="ice-cream-pieces-dark-chocolate">
         <div class="price">
           355
           <span>Р</span>
@@ -243,7 +243,7 @@
         <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/icecream-mint-syrup.png" width="267" height="267" alt="">
+        <img src="img/icecream-mint-syrup.png" width="267" height="267" alt="ice-cream-mint-syrup">
         <div class="price">
           420
           <span>Р</span>
@@ -280,11 +280,12 @@
         <a href="#">Экологические стандарты</a>
       </div>
       <div class="footer-copyright">
-        <a href="#"><img src="img/logo-ha.svg" width="108" height="37" alt="" class="clearfix"></a>
+        <a href="#"><img src="img/logo-ha.svg" width="108" height="37" alt="HTML Academy" class="clearfix"></a>
         <br>Сделано в <a href="htmlacademy.ru">HTML Academy</a>© 2016
       </div>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
